refactor and debug MSA